# httpserver

./: .clang-format  .gitignore  CMakeLists.txt  compile.bat  compile.sh  config.json  err-code-list.md
.github/workflows/: build.yml
src/: access_log.c  client.c  gui.c  health.c  http.c  logger.c  main.c  metrics.c  safe_snprintf.c  settings.c  shutdown.c  socket.c  threadpool.c  validator.c  whitelist.c
src/include/: compat.h  gui.h  health.h  settings.h  shutdown.h  threadpool.h  whitelist.h
